--- a/deploy/portainer-stack.yml
+++ b/deploy/portainer-stack.yml
@@ -16,7 +16,7 @@ services:
       - ZRP_COMPANY_EMAIL=admin@zrp.local
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "wget", "--spider", "--quiet", "http://localhost:9000/api/v1/health"]
+      test: ["CMD", "wget", "--spider", "--quiet", "http://localhost:9000/healthz"]
       interval: 30s
       timeout: 10s
       retries: 3
