--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Test
         run: go test ./... -v
 
+      - name: API Contract Tests
+        run: go test -run 'TestAPIContract|TestFrontendRoutes|TestOpenAPISpec' -v
+
   frontend:
     runs-on: ubuntu-latest
     defaults:
