--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,6 +58,7 @@
     "globals": "^16.5.0",
     "jsdom": "^27.0.1",
     "postcss": "^8.5.6",
+    "rollup-plugin-visualizer": "^6.0.8",
     "tailwindcss": "^3.4.19",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.48.0",
